clubhouse.io theme: fix story relationship label text color

--- a/surf/styles/clubhouse-dark.css
+++ b/surf/styles/clubhouse-dark.css
@@ -222,3 +222,7 @@ a.entity-title-link {
 	background-color: var(--container-background-color) !important;
 	color: var(--dim-text-color) !important;
 }
+
+.story-relationships ul {
+	color: white !important;
+}
